--- a/research-digest/backend/requirements.txt
+++ b/research-digest/backend/requirements.txt
@@ -1,5 +1,11 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 arxiv==2.1.0
+feedparser==6.0.11
 python-dotenv==1.0.0
 python-multipart==0.0.6
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.12.1
+anthropic==0.7.7
+apscheduler==3.10.4
